--- a/ProjectHD/Views/Xibs/UICollectionViewCell/RepoListCVC.xib
+++ b/ProjectHD/Views/Xibs/UICollectionViewCell/RepoListCVC.xib
@@ -28,8 +28,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="License" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x59-Kg-jsh">
-                        <rect key="frame" x="10" y="79" width="50.5" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="License" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="x59-Kg-jsh">
+                        <rect key="frame" x="10" y="79" width="227" height="18"/>
                         <fontDescription key="fontDescription" name="Verdana-BoldItalic" family="Verdana" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -46,6 +46,9 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="December 12, 2018" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sDw-mQ-uKf">
                         <rect key="frame" x="247" y="82" width="120" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="120" id="dRc-ll-nxU"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="Verdana-Italic" family="Verdana" pointSize="12"/>
                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -54,6 +57,7 @@
             </view>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="JO3-ln-jxQ" secondAttribute="trailing" constant="10" id="B2E-3l-l5c"/>
+                <constraint firstItem="sDw-mQ-uKf" firstAttribute="leading" secondItem="x59-Kg-jsh" secondAttribute="trailing" constant="10" id="EOn-hs-c3A"/>
                 <constraint firstAttribute="bottom" secondItem="x59-Kg-jsh" secondAttribute="bottom" constant="3" id="GWj-mC-5DP"/>
                 <constraint firstItem="x59-Kg-jsh" firstAttribute="top" secondItem="JO3-ln-jxQ" secondAttribute="bottom" constant="3" id="JuX-H9-Kic"/>
                 <constraint firstItem="JO3-ln-jxQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="OXY-hD-n6O"/>
@@ -66,6 +70,12 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="377" height="100"/>
+            <connections>
+                <outlet property="dateLbl" destination="sDw-mQ-uKf" id="GGg-sC-Jd2"/>
+                <outlet property="descriptionLbl" destination="JO3-ln-jxQ" id="N6e-sA-2Na"/>
+                <outlet property="licenseLbl" destination="x59-Kg-jsh" id="Dbg-nl-c1J"/>
+                <outlet property="nameLbl" destination="jMg-RW-T1q" id="6hD-wL-6es"/>
+            </connections>
             <point key="canvasLocation" x="-129.5" y="48"/>
         </collectionViewCell>
     </objects>
